# AOC2021

./: .gitignore  CMakeLists.txt
day01/start01/: CMakeLists.txt  main.cpp
day01/start02/: CMakeLists.txt  main.cpp
day02/start01/: CMakeLists.txt  main.cpp
day02/start02/: CMakeLists.txt  main.cpp
day03/: CMakeLists.txt
day03/start01/: CMakeLists.txt  main.cpp
day03/start02/: CMakeLists.txt  main.cpp
day04/start01/: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  main.cpp
day04/start02/: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  main.cpp
day05/start01/: CMakeLists.txt  main.cpp
day05/start02/: CMakeLists.txt  main.cpp
day06/: CMakeLists.txt  main.cpp
day07/star01/: CMakeLists.txt  main.cpp
day07/star02/: CMakeLists.txt  main.cpp
day08/: CMakeLists.txt  main.cpp
day09/star01/: CMakeLists.txt  main.cpp
day09/star02/: CMakeLists.txt  main.cpp
day10/star01/: CMakeLists.txt  main.cpp
day10/star02/: CMakeLists.txt  main.cpp
day11/: CMakeLists.txt  main.cpp
day12/: CMakeLists.txt  main.cpp
day13/: CMakeLists.txt  main.cpp
day14/: CMakeLists.txt  main.cpp
day15/: CMakeLists.txt  main.cpp
day16/: CMakeLists.txt  main.cpp
day17/: CMakeLists.txt  main.cpp
day18/: CMakeLists.txt  main.cpp
day19/: CMakeLists.txt  main.cpp
day20/: CMakeLists.txt  main.cpp
day21/: CMakeLists.txt
day21/star01/: CMakeLists.txt  main.cpp
day21/star02/: CMakeLists.txt  main.cpp
day22/: CMakeLists.txt  main.cpp
day23/: CMakeLists.txt  main.cpp
day24/: CMakeLists.txt  main.cpp
day25/: CMakeLists.txt  main.cpp
